fix footer cut off

--- a/docs/overrides/css/extra.css
+++ b/docs/overrides/css/extra.css
@@ -1,18 +1,19 @@
 .iframestyle {
   position: fixed;
   top: 4.8rem;
-  bottom: 110px;
+  bottom: 0rem;
   right: 0px;
   width: 100%;
   border: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  height: 85%;
+  height: 80%;
 }
 
 @media (max-width: 1219px) {
   .iframestyle {
     top: 2.4rem;
+    height: 85%;
   }
 }
